--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,18 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="stylesheet" href="cook.css" />
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="cook.css">
 
     <title>Cook Home</title>
   </head>
-  <body>
+  <body style="background-color: #2f4f4f;">
     <div id="root"></div>
     <!--
       This HTML file is a template.
