fonction d'ajout en favoris opérationnelle, petite retouche au css sur certains éléments

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 
     <title>Cook Home</title>
   </head>
-  <body style="background-color: #2f4f4f;">
+  <body>
     <div id="root"></div>
     <!--
       This HTML file is a template.
